crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__date__error__invalid_8_periodic.snap
---
source: crates/tools/cron/src/tests/unit/date.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    "/2",
                    '-',
                ),
                Nom(
                    "8/2",
                    Alt,
                ),
            ],
        },
    ),
)
