crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__date__error__invalid_periodic.snap
---
source: crates/tools/cron/src/tests/unit/date.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "invalid/2",
                    Digit,
                ),
                Nom(
                    "invalid/2",
                    Alt,
                ),
            ],
        },
    ),
)
