crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__date__error__invalid_range_periodic.snap
---
source: crates/tools/cron/src/tests/unit/date.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "/2",
                    Digit,
                ),
                Nom(
                    "1-/2",
                    Alt,
                ),
            ],
        },
    ),
)
