crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__date__error__invalid_range_periodic_value.snap
---
source: crates/tools/cron/src/tests/unit/date.rs
expression: result
---
Err(
    Failure(
        Error {
            inner: [
                Nom(
                    "invalid",
                    Digit,
                ),
            ],
        },
    ),
)
